# spicy-format

./: .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  README.md  build.rs  dist-workspace.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  pypi.yml
corpus/: attribute.spicy  attribute.spicy.expected  basic.spicy  basic.spicy.expected  bitfield.spicy  bitfield.spicy.expected  comments.spicy  comments.spicy.expected  constructs.spicy  constructs.spicy.expected  entities.spicy  entities.spicy.expected  enum.spicy  enum.spicy.expected  function-struct.spicy  function-struct.spicy.expected  function.spicy  function.spicy.expected  id.spicy  id.spicy.expected  module.spicy  module.spicy.expected  network.spicy  preprocessor.spicy  preprocessor.spicy.expected  properties.spicy  properties.spicy.expected  shift.spicy  shift.spicy.expected  statements.spicy  statements.spicy.expected  struct.spicy  struct.spicy.expected  unit.spicy  unit.spicy.expected
src/: lib.rs  main.rs  query.scm
tests/: cli.rs
tests/cmd/: attribute.toml  bitfield.toml  comments.toml  entities.toml  enum.toml  expressions.toml  for.toml  format-fail.toml  function.toml  id.toml  if.toml  module.toml  network.toml  preprocessor.toml  properties.toml  read-fail.toml  reject-parse-errors.toml  shift.toml  statements.toml  struct.toml  switch.toml  trailing-newline-file.toml  trailing-newline-stdin.toml  unit.toml  while.toml
