[package]
name = "spicy-format"
version = "0.23.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bbannier/spicy-format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-spicy = { git = "https://github.com/bbannier/tree-sitter-spicy" }
topiary-core = { git = "https://github.com/tweag/topiary.git", rev = "1dbf717ed4b8b4347dd96331d0cea64d3a23f9b3" }
topiary-tree-sitter-facade = { git = "https://github.com/tweag/topiary.git", rev = "1dbf717ed4b8b4347dd96331d0cea64d3a23f9b3" }
clap = { version = "4.5.29", features = ["std", "derive", "help"], default-features = false }
thiserror = "2.0.11"
miette = { version = "7.5.0", default-features = false, features = ["derive", "fancy"] }
rayon = "1.10.0"

[dev-dependencies]
assert_cmd = { version = "2.0.16", default-features = false }
filetime = { version = "0.2.25", default-features = false }
pretty_assertions = "1.4.1"
tempfile = { version = "3.16.0", default-features = false }
walkdir = "2.5.0"

[build-dependencies]
vergen-git2 = { version = "1.0.5", default-features = false }

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
