[package]
name = "spicy-format"
version = "0.26.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bbannier/spicy-format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-spicy = { git = "https://github.com/bbannier/tree-sitter-spicy" }
clap = { version = "4.5.48", features = ["std", "derive", "help"], default-features = false }
thiserror = "2.0.16"
miette = { version = "7.6.0", default-features = false, features = ["derive", "fancy"] }
rayon = "1.11.0"
topiary-core = { version = "0.6.1", default-features = false }
topiary-tree-sitter-facade = { version = "0.6.1", default-features = false }

[dev-dependencies]
assert_cmd = { version = "2.0.17", default-features = false }
filetime = { version = "0.2.26", default-features = false }
pretty_assertions = "1.4.1"
tempfile = { version = "3.22.0", default-features = false }
walkdir = "2.5.0"

[build-dependencies]
vergen-git2 = { version = "1.0.7", default-features = false }

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
