[package]
name = "spicy-format"
version = "0.27.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/bbannier/spicy-format"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-spicy = { git = "https://github.com/bbannier/tree-sitter-spicy" }
clap = { version = "4.5.51", features = ["std", "derive", "help"], default-features = false }
thiserror = "2.0.17"
miette = { version = "7.6.0", default-features = false, features = ["derive", "fancy"] }
rayon = "1.11.0"
topiary-core = { version = "0.7.0", default-features = false }
topiary-tree-sitter-facade = { version = "0.7.0", default-features = false }

[dev-dependencies]
assert_cmd = { version = "2.1.1", default-features = false }
filetime = { version = "0.2.26", default-features = false }
pretty_assertions = "1.4.1"
tempfile = { version = "3.23.0", default-features = false }
trycmd = "0.15.10"
walkdir = "2.5.0"

[build-dependencies]
vergen-git2 = { version = "1.0.7", default-features = false }

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
